--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+products/<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -102,7 +102,7 @@
             <li class="products-item">
               <img
                 class="product-img"
-                src="./images/img-1.jpg"
+                src="./images/products/img-1.jpg"
                 alt="Graphics on the monitor"
                 width="360"
                 height="300"
@@ -111,7 +111,7 @@
             <li class="products-item">
               <img
                 class="product-img"
-                src="./images/img-2.jpg"
+                src="./images/products/img-2.jpg"
                 alt="Mobile application pages"
                 width="360"
                 height="300"
@@ -120,7 +120,7 @@
             <li class="products-item">
               <img
                 class="product-img"
-                src="./images/img-3.jpg"
+                src="./images/products/img-3.jpg"
                 alt="Mobile App"
                 width="360"
                 height="300"
@@ -136,7 +136,7 @@
             <li class="card">
               <img
                 class="card-img"
-                src="./images/member1.jpg"
+                src="./images/team/member1.jpg"
                 alt="Project participant"
                 width="264"
                 height="260"
@@ -149,7 +149,7 @@
             <li class="card">
               <img
                 class="card-img"
-                src="./images/member2.jpg"
+                src="./images/team/member2.jpg"
                 alt="Project participant"
                 width="264"
                 height="260"
@@ -162,7 +162,7 @@
             <li class="card">
               <img
                 class="card-img"
-                src="./images/member3.jpg"
+                src="./images/team/member3.jpg"
                 alt="Project participant"
                 width="264"
                 height="260"
@@ -175,7 +175,7 @@
             <li class="card">
               <img
                 class="card-img"
-                src="./images/member4.jpg"
+                src="./images/team/member4.jpg"
                 alt="Project participant"
                 width="264"
                 height="260"
