--- a/index.html
+++ b/index.html
@@ -379,14 +379,49 @@ products/<!DOCTYPE html>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-info container">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-sections container">
+        <div class="footer-info">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-footer">
+          <h2 class="social-media-footer-title">Social media</h2>
+          <ul class="social-list list footer-list">
+            <li class="social-list-item footer-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item footer-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item footer-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item footer-item">
+              <a href="" class="social-list-link footer-social-link">
+                <svg class="social-list-icon">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
