--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-products/<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -67,7 +67,7 @@ products/<!DOCTYPE html>
             <li class="feature-content">
               <div class="icon-item">
                 <svg class="feature-icon">
-                  <use href="./images/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icon.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="feature-subject">Strategy</h3>
@@ -79,7 +79,7 @@ products/<!DOCTYPE html>
             <li class="feature-content">
               <div class="icon-item">
                 <svg class="feature-icon">
-                  <use href="./images/sprite.svg#icon-clock"></use>
+                  <use href="./images/icon.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="feature-subject">Punctuality</h3>
@@ -91,7 +91,7 @@ products/<!DOCTYPE html>
             <li class="feature-content">
               <div class="icon-item">
                 <svg class="feature-icon">
-                  <use href="./images/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="feature-subject">Diligence</h3>
@@ -103,7 +103,7 @@ products/<!DOCTYPE html>
             <li class="feature-content">
               <div class="icon-item">
                 <svg class="feature-icon">
-                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="feature-subject">Technologies</h3>
@@ -168,28 +168,28 @@ products/<!DOCTYPE html>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -211,28 +211,28 @@ products/<!DOCTYPE html>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -254,28 +254,28 @@ products/<!DOCTYPE html>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -297,28 +297,28 @@ products/<!DOCTYPE html>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -335,42 +335,42 @@ products/<!DOCTYPE html>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo">
-                  <use href="./images/sprite.svg#icon-customer1"></use>
+                  <use href="./images/icon.svg#icon-customer1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo">
-                  <use href="./images/sprite.svg#icon-customer2"></use>
+                  <use href="./images/icon.svg#icon-customer2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo">
-                  <use href="./images/sprite.svg#icon-customer3"></use>
+                  <use href="./images/icon.svg#icon-customer3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo">
-                  <use href="./images/sprite.svg#icon-customer4"></use>
+                  <use href="./images/icon.svg#icon-customer4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo">
-                  <use href="./images/sprite.svg#icon-customer5"></use>
+                  <use href="./images/icon.svg#icon-customer5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-logo">
-                  <use href="./images/sprite.svg#icon-customer6"></use>
+                  <use href="./images/icon.svg#icon-customer6"></use>
                 </svg>
               </a>
             </li>
@@ -395,28 +395,28 @@ products/<!DOCTYPE html>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
