--- a/portfolio.html
+++ b/portfolio.html
@@ -224,28 +224,28 @@
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
                 <svg class="social-list-icon">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
