--- a/portfolio.html
+++ b/portfolio.html
@@ -219,7 +219,7 @@
           </p>
         </div>
         <div class="social-media-footer">
-          <h2 class="social-media-footer-title">Social media</h2>
+          <p class="social-media-footer-text">Social media</p>
           <ul class="social-list list footer-list">
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
