--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
           >
           <ul class="site-nav list">
             <li class="item">
-              <a class="nav-nk link" href="./index.html">Studio</a>
+              <a class="nav-link link" href="./index.html">Studio</a>
             </li>
             <li class="item">
               <a class="nav-link link" href="./portfolio.html">Portfolio</a>
